<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_headline">

    <fragment
        android:id="@+id/navigation_headline"
        android:name="com.binhnguyen.newsapp.ui.headline.HeadlineFragment"
        android:label="@string/title_headline"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_custom"
        android:name="com.binhnguyen.newsapp.ui.custom.CustomFragment"
        android:label="@string/title_custom"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.binhnguyen.newsapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>